# sailfish

./: .travis.yml  CMakeLists.txt  ChangeLog.md  Dummy_File  GenerateManual.sh  GenerateREADMEHTML.sh  Manual.md  PublishREADMEToWebsite.sh  README  README.html  README.md  main.css  sample_data.tgz
cmake/: PostInstall.cmake  SimpleTest.cmake
cmake/Modules/: FindJellyfish.cmake
doc/: license-header.txt
doc/source/: building.rst  conf.py  index.rst  library_type.rst  sailfish.rst  salmon.rst
experiment_configs/: SRX016368.cfg  SRX016368_20mers.cfg  SRX016369.cfg  qpcr_compare.cfg  qpcr_compare.json  qpcr_compare_22mers.cfg  qpcr_compare_corrected.cfg  qpcr_compare_corrected_18mers.cfg  qpcr_compare_new.cfg
include/: AlignmentGroup.hpp  AlignmentLibrary.hpp  AlignmentModel.hpp  AtomicMatrix.hpp  BAMQueue.hpp  BAMQueue.tpp  BiasIndex.hpp  BinaryLiteral.hpp  ClusterForest.hpp  CollapsedEMOptimizer.hpp  CollapsedGibbsSampler.hpp  CollapsedIterativeOptimizer.hpp  CommonTypes.hpp  CountDB.hpp  CountDBNew.hpp  EmpiricalDistribution.hpp  EquivalenceClassBuilder.hpp  ErrorModel.hpp  ForgettingMassCalculator.hpp  FragmentLengthDistribution.hpp  FragmentList.hpp  GZipWriter.hpp  GenomicFeature.hpp  HDF5Writer.hpp  HeptamerIndex.hpp  KmerDist.hpp  KmerDist.hpp~  LibraryFormat.hpp  LogSearchIndex.hpp  LookUpTableUtils.hpp  MatrixTools.hpp  MiniBatchInfo.hpp  PairSequenceParser.hpp  PairSequenceParserGeneral.hpp  PartitionRefiner.hpp  PerfectHashIndex.hpp  ReadExperiment.hpp  ReadKmerDist.hpp  ReadKmerDist.hpp~  ReadLibrary.hpp  (+34 more)
include/boost/lockfree/detail/: atomic.hpp
include/spdlog/details/: format.cc
include/tclap/: Makefile
include/tensemble/: Tree.h
include/threadpool/: task_adaptors.hpp
scripts/: AggregateToGeneLevel.py  ExpressionTools.py  GenerateExpressionFiles.sh  MutateReference.py  ParseSoftFile.py  PlotCorrelation.py  SFPipeline.py  compile.sh  fetchRapMap.sh  make-release.sh  memtrace  push-binary.sh
src/: 1  AlignmentModel.cpp  AnalyzeKmerTradeoff.cpp  BiasCorrectionDriver.cpp  BuildLUT.cpp  BuildSalmonIndex.cpp  BuildTranscriptMap.cpp  CMakeLists.txt  CollapsedEMOptimizer.cpp  CollapsedGibbsSampler.cpp  ComputeBiasFeatures.cpp  EmpiricalDistribution.cpp  ErrorModel.cpp  FASTAParser.cpp  FragmentLengthDistribution.cpp  FragmentList.cpp  FragmentStartPositionDistribution.cpp  G12.cpp  GZipWriter.cpp  GenomicFeature.cpp  HDF5Writer.cpp  HeptamerIndex.cpp  IndexedCounter.cpp  Indexer.cpp  JellyfishMerCounter.cpp  LibraryFormat.cpp  LookUpTableUtils.cpp  MultithreadedBAMParser.cpp  PCA.cpp  PCAUtils.cpp  PartitionRefiner.cpp  PerfectHashIndexer.cpp  PerformBiasCorrection.cpp  PerformBiasCorrection_old.cpp  QuantificationDriver.cpp  Sailfish.cpp  SailfishIndexer.cpp  SailfishQuantify.cpp  SailfishStringUtils.cpp  SailfishUtils.cpp  (+21 more)
src/obsolete/: MapProbesToGenes.cpp
tests/: KmerHistTests.cpp  LibraryTypeTests.cpp  UnitTests.cpp
